tests/error/constrData.uplc
(program 0.0.0 [[(builtin constrData) (con integer 1)] (con data { Integer 0 })] )
